Updated CSS and html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Welcome!</title>
-        <link rel = "stylesheet" type = "text/css" href = "./main.css">
-    </head>
-    <body>
-        hello world
-            
-            <script src="./main.js">                </script>
-    
-        </body>
-        </html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js" defer></script>
+</head>
+
+<body>
+    <p class="red-text">
+        Hello World
+    </p>
+</body>
+
+</html>
